# professional-services

./: .gcloudignore  .gitignore  .gitmodules  .pylintrc  .shellcheckrc  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bootstrap.sh  cloudbuild.yaml  deploy.sh  deploy_model.sh  docker-compose.yml  main.py  make-svc.sh  online_predict.sh  predict_payload.json  requirements.txt  run_pipeline.sh  sql_style_guide.md  test  test_file  undeploy_model.sh
examples/creative-studio/backend/: .local.env  alembic.ini  cloudbuild.yaml  env_template  main.py  pyproject.toml
examples/creative-studio/backend/alembic/: env.py
examples/creative-studio/backend/bootstrap/: bootstrap.py  seed_data.py
examples/creative-studio/backend/src/: database.py  database_migrations.py
examples/slo-assistant/: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  Readme.md  app_ui.py  main.py  pyproject.toml  run.sh  server.py
examples/slo-assistant/app/: __init__.py  config.py  state.py
examples/slo-assistant/app/frontend/: common.py  copilot.py
examples/slo-assistant/app/nodes/: __init__.py  code_analyst.py  diagram_generator.py  git_loader.py  orchestrator.py  refiner.py  slo_specialist.py  terraform_generator.py
examples/slo-assistant/app/prompts/: __init__.py  cuj_prompts.py  diagram_prompts.py  orchestrator_prompts.py  planner_prompts.py  refiner_prompts.py  slo_prompts.py  terraform_prompts.py
examples/slo-assistant/app/services/: api_client.py  artifact_manager.py
examples/slo-assistant/app/utils/: __init__.py  gcs_checkpointer.py  git_ops.py  logger.py  storage_ops.py  text_utils.py
tools/agent-eval/: GEMINI.md  README.md  build_wheel.sh  cloudbuild.yaml  pyproject.toml
tools/agent-eval/docs/: FUTURE_WORK.md  reference.md
tools/agent-eval/src/agent_eval/: __init__.py  __main__.py  sdk.py
tools/agent-eval/src/agent_eval/cli/: _pacing.py  (+2 more)
tools/agent-eval/tests/: test_no_path_ab_in_user_facing.py  test_package.py  test_rescue_smoke.py  test_sdk.py
tools/agent-eval/tests/cli/: test_cli_integration.py  test_init.py  test_interact.py  test_migrate.py
tools/agent-eval/tests/core/: conftest.py  test_agent_client.py  test_analyzer_comparison.py  test_capability_routing.py  test_config.py  test_converters_per_invocation.py  test_data_mapper.py  test_deterministic_metrics.py  test_evaluator.py  test_evaluator_generated.py  test_html_report_rendering.py  test_interactions.py  test_kfp_pipeline.py  test_metric_discovery.py  test_metric_factory.py  test_metric_generator.py  test_path_resolver.py  test_pipeline_components.py  test_scaffold.py  test_simulation.py
tools/agent-eval/tests/dashboard/: test_data.py
tools/agent-eval/tools/: check_no_path_ab.sh
tools/bqms-config-generator/: README.md  pyproject.toml  run.sh
tools/bqms-config-generator/config_generator/: main.py
tools/bqms-config-generator/config_generator/schema/: json_schema.json  yaml_schema.json
tools/bqms-config-generator/config_generator/test/: __init__.py  conftest.py  test_constants.py  test_csv_json_parser.py  test_csv_yaml_parser.py  test_utils.py
tools/bqms-config-generator/config_generator/util/: constants.py  csv_json_parser.py  csv_yaml_parser.py  model.py  utils.py  validator.py
tools/bqms-config-generator/input/: conf_prep_path.yaml  hive_bq_datatype_map.csv  object_mapv2.csv
tools/bqms-config-generator/output/: ATR_mapping.yaml  object_mapping.json
tools/gemini-computer-use-eval/: .dockerignore  .env.docker.example  .env.example  .geminiignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  uv.toml
tools/gemini-computer-use-eval/autoresearch/: .env.example  README.md  evaluate_population.py  evaluate_task_prompt.py  keepalive.sh  program.md  run_tournament.sh  visualize.py
tools/gemini-computer-use-eval/autoresearch/population/: candidate_example.yaml
tools/gemini-computer-use-eval/computer_use_eval/: config.py  constants.py  custom_tools.py  logger.py  plugin_manager.py  prompts.py  reflection.py  runner.py  safety.py  tool_executor.py  utils.py
tools/gemini-computer-use-eval/computer_use_eval/actions/: __init__.py  base.py  keyboard.py  mouse.py  navigation.py
tools/gemini-computer-use-eval/computer_use_eval/browser/: perception.py  playwright_env.py  sandbox_manager.py  screen_buffer.py
tools/gemini-computer-use-eval/computer_use_eval/cli/: scaffold.py  templates.py
tools/gemini-computer-use-eval/computer_use_eval/core/: base.py  batch_runner.py  gemini_agent.py  managers.py  session_factory.py
tools/gemini-computer-use-eval/computer_use_eval/evaluation/: judge.py  reporting.py  vertex_eval.py
tools/gemini-computer-use-eval/config/benchmarks/: erpnext_create_item.yaml  gitlab_find_email.yaml  google_search.yaml
tools/gemini-computer-use-eval/docs/: SETUP.md  USAGE.md
tools/gemini-computer-use-eval/docs/architecture/: PIPELINE.md  REFLECTIVE_SUPERVISION.md  extensibility.md
tools/gemini-computer-use-eval/docs/guides/: CONFIGURATION.md  CREATING_BENCHMARKS.md  DEBUGGING.md  DOCKER_USAGE.md  EXTENDING.md  EXTENDING_CORE.md  GEMINI_SDK_LEARNINGS.md  HELLO_WORLD.md  PERFORMANCE.md  PROMPTING.md  STABILITY_AND_OPTIMIZATION.md
tools/gemini-computer-use-eval/examples/: __init__.py
tools/gemini-computer-use-eval/examples/custom_hooks_demo/: README.md  benchmark.yaml  custom_tools.py  hooks.py
tools/gemini-computer-use-eval/examples/plugins/: hello_world.py  smart_scroll.py
tools/gemini-computer-use-eval/scripts/: destroy_sandbox_infra.py  dynamic_shipment_config.py  entrypoint.sh  run_docker.sh  setup_gcs_lifecycle.sh  setup_sandbox_infra.py
tools/gemini-computer-use-eval/tests/: conftest.py  docker_smoke_test.py  test_native_select_rendering.py
tools/gke-gpu-driver-version/: Cargo.toml  README.md  build.rs
tools/gke-gpu-driver-version/src/: main.rs
tools/gpudirect-webhook/: Cargo.toml  Dockerfile  README.md  k8s.yaml  test_tcpx.yaml  test_tcpxo.yaml
tools/gpudirect-webhook/src/: cluster.rs  config.rs  constants.rs  errors.rs  gcp_auth.rs  main.rs  networks.rs  utils.rs  webhook.rs
(+11036 files in other folders)
