# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-8.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slo-assistant"
version = "0.6.0"
description = "AI-Powered SLO Consultant for Automated Site Reliability Engineering"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Dee Kalra", email = "deekalra@google.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core application dependencies
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "langgraph",
    "langgraph-checkpoint-firestore",
    "langchain-core",
    "langchain-google-genai",
    "google-cloud-firestore",
    "streamlit",
    "python-dotenv",
    "google-cloud-storage",
    "GitPython",
    "requests",
    "streamlit-mermaid",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov", 
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint]
max-line-length = 100
disable = [
    "W0101",  # Unreachable code
    "W0718",  # Catching too general exception Exception
    "R0914",  # Too many local variables
    "R0912",  # Too many branches
    "R0915",  # Too many statements
    "R0911",  # Too many return statements
    "R1710",  # Inconsistent return statements
    "R0801",  # Duplicate code
    "W0621",  # Redefining name from outer scope
    "R0913",  # Too many arguments
    "R0917",  # Too many positional arguments
    "C0114",  # Missing module docstring
    "C0116",  # Missing function or method docstring
]