[project]
name = "agent-eval"
version = "0.1.0"
description = "Evaluation CLI for ADK agents — run interactions, evaluate with metrics, and analyze results."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "requests>=2.33.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.132.0,<2.0.0",

    "db-dtypes>=1.4.2,<2.0.0",
    "google-cloud-bigquery>=3.25.0",
    "google-adk[eval]>=2.0.0,<3.0.0",
    "tqdm>=4.66.0",
    "questionary>=2.0.0",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dashboard = [
    "gradio>=6.3.0",
    "plotly>=6.5.2",
]

[project.scripts]
agent-eval = "agent_eval.cli.main:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[[tool.uv.index]]
url = "https://pypi.org/simple/"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["my-agent", "agents", ".venv", ".backup", "build", "dist"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (syntax modernization)
    "SIM",  # flake8-simplify (code simplification)
    "C4",   # flake8-comprehensions (better comprehensions)
]
ignore = [
    "E501",  # line too long
]
