# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "computer-use-eval"
version = "0.1.0"
description = "Computer Use Evaluation Pipeline for Gemini 2.5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform[agent_engines,evaluation]>=1.134.0",
    "google-cloud-bigquery>=3.10.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=3.7.0",
    "google-genai>=0.2.0",
    "pandas>=2.0.0",
    "opencv-python-headless>=4.8.0",
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",
    "termcolor>=3.3.0",
    "mss>=10.1.0",
    "pillow>=12.1.1",
    "jinja2>=3.1.6",
    "vulture>=2.14",
    "google-cloud-iam>=2.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["computer_use_eval"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "pytest-cov>=4.1.0",
]

[project.scripts]
computer-eval = "computer_use_eval.runner:cli_main"
computer-batch = "computer_use_eval.core.batch_runner:main"
