[package]
name = "gpudirect-webhook"
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0", features = ["admission"] }
serde = "1.0.218"
serde_json = "1.0.139"
env_logger = "0.11.6"
anyhow = "1.0.96"
json-patch = "4.0.0"
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio-rustls = { version = "0.26.2", features = ["ring", "tls12"] , default-features = false }
serde_yml = "0.0.12"
